Fixed copyright alignment

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ img {
 }
 
 /* Footer */
-footer {
+.footer {
   text-align: center;
 }
 
